# embedded

./: .gitignore  pyproject.toml  shell.nix
src/: Makefile
src/arduino/: Makefile  common.mk
src/arduino/inc/: arduino_uart.h
src/arduino/projects/blink/: Makefile  main.c
src/arduino/projects/hello_world/: Makefile  main.c
src/arduino/src/: arduino_uart.c
src/lib/inc/: formatted_print.h  log.h
src/lib/src/: formatted_print.c
tools/: build_tool.py  build_tool.sh  flash_tool.py  flash_tool.sh  uart_terminal.py
